# 3ds-mp3-player

./: CMakeLists.txt  Makefile  main.cpp  mp3_player.3dsx  mp3_player.elf  mp3_player.map  mp3_player.smdh
include/: JSON_handler.h  Metadata_Handler.h
old/: Old_main.txt
source/: Metadata_Handler.cpp  libmp3player.cpp  libmp3player.h  main.cpp
